--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ idna==3.6
 Markdown==3.6
 packaging==24.0
 Pillow==10.1.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pytz==2024.1
 requests==2.31.0
