--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.3.2
 dj-database-url==2.1.0
 Django==4.2.7
 django-cors-headers==4.2.0
+django-environ==0.11.2
 django-filter==24.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
