--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 dj-database-url==2.1.0
 Django==5.0.4
+django-cors-headers==4.3.1
 django-environ==0.11.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
