--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==2.1.0
 Django==5.0.4
 django-cors-headers==4.3.1
 django-environ==0.11.2
+django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 environs==11.0.0
