--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 certifi==2024.2.2
+chardet==3.0.4
 charset-normalizer==3.3.2
 dj-database-url==2.1.0
 Django==5.0.4
@@ -9,8 +10,16 @@ django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 environs==11.0.0
+googletrans==3.1.0a0
 gunicorn==21.2.0
-idna==3.6
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.6.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
 marshmallow==3.21.1
 packaging==24.0
 pillow==10.3.0
@@ -18,6 +27,8 @@ psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-dotenv==1.0.1
 requests==2.31.0
+rfc3986==1.5.0
+sniffio==1.3.1
 sqlparse==0.4.4
 typing_extensions==4.11.0
 tzdata==2024.1
