--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+amqp==5.2.0
 asgiref==3.8.1
+billiard==4.2.0
+celery==5.4.0
 certifi==2024.2.2
 chardet==3.0.4
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 dj-database-url==2.1.0
 Django==5.0.4
 django-cors-headers==4.3.1
@@ -20,17 +28,23 @@ httpcore==0.9.1
 httpx==0.13.3
 hyperframe==5.2.0
 idna==2.10
+kombu==5.4.0
 marshmallow==3.21.1
 packaging==24.0
 pillow==10.3.0
+prompt_toolkit==3.0.47
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 requests==2.31.0
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.1
 sqlparse==0.4.4
 typing_extensions==4.11.0
 tzdata==2024.1
 Unidecode==1.3.8
 urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
